force-app/main/default/objects/CSA__c/fields/PayTo_Admin_Fee_Waived__c.field-meta.xml
<CustomField>
    <fullName>PayTo_Admin_Fee_Waived__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PayTo Admin Fee Waived</label>
    <type>Checkbox</type>
</CustomField>