force-app/main/default/objects/CSA__c/fields/PayTo_Failed_Payment_Fee_Paid_By__c.field-meta.xml
<CustomField>
    <fullName>PayTo_Failed_Payment_Fee_Paid_By__c</fullName>
    <label>PayTo Failed Payment Fee Paid By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>