force-app/main/default/objects/CSA__c/fields/PayTo_Failed_Payment_Fee_Waived__c.field-meta.xml
<CustomField>
    <fullName>PayTo_Failed_Payment_Fee_Waived__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PayTo Failed Payment Fee Waived</label>
    <type>Checkbox</type>
</CustomField>