force-app/main/default/objects/CSA__c/fields/PayTo_Transaction_Fee_Waived__c.field-meta.xml
<CustomField>
    <fullName>PayTo_Transaction_Fee_Waived__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PayTo Transaction Fee Waived</label>
    <type>Checkbox</type>
</CustomField>