force-app/main/default/objects/CSA__c/fields/Redebit_Dishonour_Fee_Waived__c.field-meta.xml
<CustomField>
    <fullName>Redebit_Dishonour_Fee_Waived__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Redebit Dishonour Fee Waived</label>
    <type>Checkbox</type>
</CustomField>