force-app/main/default/objects/CSA__c/fields/Settlement_Fee__c.field-meta.xml
<CustomField>
    <fullName>Settlement_Fee__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Settlement Fee</label>
    <type>Checkbox</type>
</CustomField>