force-app/main/default/objects/CSA__c/fields/Settlement_Fee_Waived__c.field-meta.xml
<CustomField>
    <fullName>Settlement_Fee_Waived__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Settlement Fee Waived</label>
    <type>Checkbox</type>
</CustomField>