force-app/main/default/objects/CSA__c/fields/SMS_Notification__c.field-meta.xml
<CustomField>
    <fullName>SMS_Notification__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SMS Notification</label>
    <type>Checkbox</type>
</CustomField>