force-app/main/default/objects/CSA__c/fields/SoftPOS__c.field-meta.xml
<CustomField>
    <fullName>SoftPOS__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>control SoftPOS section show/hidden on CSA</inlineHelpText>
    <label>SoftPOS</label>
    <type>Checkbox</type>
</CustomField>