force-app/main/default/objects/CSA__c/fields/Terminal_Rental_Fee_Paid_By__c.field-meta.xml
<CustomField>
    <fullName>Terminal_Rental_Fee_Paid_By__c</fullName>
    <label>Terminal Rental Fee Paid By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>