force-app/main/default/objects/CSA__c/fields/Terminal_Rental_Fee_Waived__c.field-meta.xml
<CustomField>
    <fullName>Terminal_Rental_Fee_Waived__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Terminal Rental Fee Waived</label>
    <type>Checkbox</type>
</CustomField>