force-app/main/default/objects/CSA__c/fields/Use_Partner_Logo__c.field-meta.xml
<CustomField>
    <fullName>Use_Partner_Logo__c</fullName>
    <defaultValue>false</defaultValue>
    <description>It indicate to use partner logo or not.</description>
    <label>Use Partner Logo</label>
    <type>Checkbox</type>
</CustomField>