force-app/main/default/objects/CSA__c/fields/Visa_MasterCard_Fee_BPAY_Paid_By__c.field-meta.xml
<CustomField>
    <fullName>Visa_MasterCard_Fee_BPAY_Paid_By__c</fullName>
    <label>Visa MasterCard Fee BPAY Paid By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>