force-app/main/default/objects/CSA__c/fields/Visa_MasterCard_Fee_Direct_Debit_Waived__c.field-meta.xml
<CustomField>
    <fullName>Visa_MasterCard_Fee_Direct_Debit_Waived__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Visa MasterCard Fee Direct Debit Waived</label>
    <type>Checkbox</type>
</CustomField>