force-app/main/default/objects/CSA__c/fields/Visa_Mastercard_TF_Paid_By_Xero__c.field-meta.xml
<CustomField>
    <fullName>Visa_Mastercard_TF_Paid_By_Xero__c</fullName>
    <label>Visa Mastercard TF Paid By Xero</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>