force-app/main/default/objects/CSA__c/fields/Visa_Mastercard_Xero_Waived__c.field-meta.xml
<CustomField>
    <fullName>Visa_Mastercard_Xero_Waived__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Visa Mastercard Xero Waived</label>
    <type>Checkbox</type>
</CustomField>