force-app/main/default/objects/CSA__c/fields/XERO_BPAY__c.field-meta.xml
<CustomField>
    <fullName>XERO_BPAY__c</fullName>
    <defaultValue>false</defaultValue>
    <label>XERO BPAY</label>
    <type>Checkbox</type>
</CustomField>