force-app/main/default/objects/CSA__c/fields/XERO_Fees__c.field-meta.xml
<CustomField>
    <fullName>XERO_Fees__c</fullName>
    <defaultValue>false</defaultValue>
    <label>XERO Fees</label>
    <type>Checkbox</type>
</CustomField>