force-app/main/default/objects/CSA__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>Opportunity__c</columns>
    <columns>Direct_Debit__c</columns>
    <columns>Logo__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Direct_Debit__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All</label>
</ListView>